--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "02-lessons",
+  "name": "sass",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "watch": "node-sass -o css scss/main.scss -w"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
